# AndreaRiboni

./: .gitignore  README.md  main.py  pyproject.toml  start_homepage_server.sh
homepage/: main.py  pyproject.toml
homepage/experiments/: grid.html  nn_train.html  rainbow.html
homepage/experiments/explorer_map/: README.md  ai_pixelart_to_real_one.py  drawn_map_to_game_map.py  generate_mbtile.py  tiles_to_tileset.py  tileset_to_tiles.py
homepage/static/: draw_inference.html  index.html  map_index.html  terminal.html
homepage/static/css/: explorer.css  homepage-styling.css  terminal-styling.css  text-slide.css
homepage/static/js/: background.js  draw.js  explorer.js  homepage-scripts.js  terminal-scripts.js  text-slide.js  token-scripts.js
