[project]
name = "andreariboni"
version = "0.1.0"
description = "Portfolio homepage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "noise>=1.2.2",
    "opencv-python>=4.11.0.86",
    "opensimplex>=0.4.5.1",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "pymbtiles>=0.5.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "tensorflow>=2.19.0",
    "uvicorn>=0.34.3",
]
